; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_sock.c_sock_wmalloc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_sock.c_sock_wmalloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.sock = type { i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.sk_buff* @sock_wmalloc(%struct.sock* %0, i64 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.sk_buff*, align 8
  %6 = alloca %struct.sock*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.sk_buff*, align 8
  store %struct.sock* %0, %struct.sock** %6, align 8
  store i64 %1, i64* %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %11 = load i32, i32* %8, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %21, label %13

13:                                               ; preds = %4
  %14 = load %struct.sock*, %struct.sock** %6, align 8
  %15 = getelementptr inbounds %struct.sock, %struct.sock* %14, i32 0, i32 1
  %16 = call i64 @atomic_read(i32* %15)
  %17 = load %struct.sock*, %struct.sock** %6, align 8
  %18 = getelementptr inbounds %struct.sock, %struct.sock* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp slt i64 %16, %19
  br i1 %20, label %21, label %33

21:                                               ; preds = %13, %4
  %22 = load i64, i64* %7, align 8
  %23 = load i32, i32* %9, align 4
  %24 = call %struct.sk_buff* @alloc_skb(i64 %22, i32 %23)
  store %struct.sk_buff* %24, %struct.sk_buff** %10, align 8
  %25 = load %struct.sk_buff*, %struct.sk_buff** %10, align 8
  %26 = icmp ne %struct.sk_buff* %25, null
  br i1 %26, label %27, label %32

27:                                               ; preds = %21
  %28 = load %struct.sk_buff*, %struct.sk_buff** %10, align 8
  %29 = load %struct.sock*, %struct.sock** %6, align 8
  %30 = call i32 @skb_set_owner_w(%struct.sk_buff* %28, %struct.sock* %29)
  %31 = load %struct.sk_buff*, %struct.sk_buff** %10, align 8
  store %struct.sk_buff* %31, %struct.sk_buff** %5, align 8
  br label %34

32:                                               ; preds = %21
  br label %33

33:                                               ; preds = %32, %13
  store %struct.sk_buff* null, %struct.sk_buff** %5, align 8
  br label %34

34:                                               ; preds = %33, %27
  %35 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  ret %struct.sk_buff* %35
}

declare dso_local i64 @atomic_read(i32*) #1

declare dso_local %struct.sk_buff* @alloc_skb(i64, i32) #1

declare dso_local i32 @skb_set_owner_w(%struct.sk_buff*, %struct.sock*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
